[project]
name = "olly-demo"
version = "0.1.1"
description = ""
authors = [
    {name = "Emmanuel Onyebueke",email = "developer.olly@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "olly_demo", from = "src"}]

[tool.poetry.group.test.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
